--- a/custom_clash.ini
+++ b/custom_clash.ini
@@ -6,10 +6,10 @@ ruleset=❌ 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=❌ 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🚀 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🚀 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=📌 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=📌 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=📌 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-ruleset=📌 节点选择,https://raw.githubusercontent.com/steventong/clash-rules/main/custom_rules.list
+ruleset=🪜 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=🪜 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🪜 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
+ruleset=🪜 加速节点,https://raw.githubusercontent.com/steventong/clash-rules/main/custom_rules.list
 ruleset=💬 ChatGPT节点,https://raw.githubusercontent.com/steventong/clash-rules/main/openai_rules.list
 ruleset=🚀 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🚀 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -17,11 +17,11 @@ ruleset=🚀 全球直连,[]GEOIP,LAN
 ruleset=🚀 全球直连,[]GEOIP,CN
 ruleset=🐟 其他地址,[]FINAL
 
-custom_proxy_group=📌 节点选择`select`[]DIRECT`.*
+custom_proxy_group=🪜 加速节点`select`[]DIRECT`.*
 custom_proxy_group=💬 ChatGPT节点`select`[]DIRECT`.*
-custom_proxy_group=🚀 全球直连`select`[]DIRECT`[]📌 节点选择
+custom_proxy_group=🚀 全球直连`select`[]DIRECT`[]🪜 加速节点
 custom_proxy_group=❌ 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 其他地址`select`[]📌 节点选择`[]🚀 全球直连`.*
+custom_proxy_group=🐟 其他地址`select`[]🪜 加速节点`[]🚀 全球直连`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
