--- a/custom_clash.ini
+++ b/custom_clash.ini
@@ -2,8 +2,8 @@
 
 ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🚫 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🚫 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
@@ -20,7 +20,7 @@ ruleset=🟠 其他地址,[]FINAL
 custom_proxy_group=🚀 加速节点`select`[]DIRECT`.*
 custom_proxy_group=💬 ChatGPT节点`select`[]DIRECT`.*
 custom_proxy_group=🟢 全球直连`select`[]DIRECT`[]🚀 加速节点
-custom_proxy_group=🚫 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🟠 其他地址`select`[]🚀 加速节点`[]🟢 全球直连`.*
 
 enable_rule_generator=true
