--- a/clash_config.ini
+++ b/clash_config.ini
@@ -2,27 +2,31 @@
 
 ruleset=🚫 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🚫 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=💬 ChatGPT节点,https://raw.githubusercontent.com/steventong/clash-rules/main/openai_rules.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/steventong/clash-rules/main/custom_rules.list
-ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🟢 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=🟢 全球直连,[]GEOIP,LAN
-ruleset=🟢 全球直连,[]GEOIP,CN
-ruleset=🟠 其他地址,[]FINAL
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=🟢 国内直连,[]GEOIP,LAN
+ruleset=🟢 国内直连,[]GEOIP,CN
+ruleset=❓ 其他地址,[]FINAL
 
-custom_proxy_group=🚀 加速节点`select`[]DIRECT`.*
-custom_proxy_group=💬 ChatGPT节点`select`[]DIRECT`.*
-custom_proxy_group=🟢 全球直连`select`[]DIRECT`[]🚀 加速节点
+custom_proxy_group=🚀 加速节点`select`[]DIRECT`✅ 4X节点`✅ 2X节点`.*
+custom_proxy_group=💬 ChatGPT节点`select`✅ 2X节点`[]DIRECT`.*
+custom_proxy_group=🟢 国内直连`select`[]DIRECT`[]🚀 加速节点
 custom_proxy_group=🚫 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🟠 其他地址`select`[]🚀 加速节点`[]🟢 全球直连`.*
+custom_proxy_group=❓ 其他地址`select`[]DIRECT`[]🚀 加速节点`[]🟢 国内直连
+custom_proxy_group=🌈 其他地址`select`[]DIRECT`[]🚀 加速节点`[]🟢 国内直连
+custom_proxy_group=✅ 4X节点`select`.*4x.*
+custom_proxy_group=✅ 2X节点`select`.*2x.*
+custom_proxy_group=✅ 1X节点`select`.*1x.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
