--- a/clash_config.ini
+++ b/clash_config.ini
@@ -1,19 +1,28 @@
 [custom]
 
+ruleset=🚫 广告拦截,https://raw.githubusercontent.com/steventong/clash-rules/main/my_ban_rules.list
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/steventong/clash-rules/main/my_direct_rules.list
+ruleset=🚀 加速节点,https://raw.githubusercontent.com/steventong/clash-rules/main/my_proxy_rules.list
+
 ruleset=🚫 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🚫 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+
+ruleset=💬 ChatGPT节点,https://raw.githubusercontent.com/steventong/clash-rules/main/openai_rules.list
+
 ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=💬 ChatGPT节点,https://raw.githubusercontent.com/steventong/clash-rules/main/openai_rules.list
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=🚀 加速节点,https://raw.githubusercontent.com/steventong/clash-rules/main/custom_rules.list
-ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🟢 国内直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+
+ruleset=🟢 内网直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+
 ruleset=🟢 国内直连,[]GEOIP,LAN
 ruleset=🟢 国内直连,[]GEOIP,CN
 ruleset=❓ 其他地址,[]FINAL
@@ -27,6 +36,7 @@ custom_proxy_group=🌈 其他地址`select`[]DIRECT`[]🚀 加速节点`[]🟢 
 custom_proxy_group=✅ 4X节点`select`.*4x.*
 custom_proxy_group=✅ 2X节点`select`.*2x.*
 custom_proxy_group=✅ 1X节点`select`.*1x.*
+custom_proxy_group=🟢 内网直连`select`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
